--- a/src/main/resources/templates/prenotazioniPerUtente.html
+++ b/src/main/resources/templates/prenotazioniPerUtente.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="fragments/layout.html :: bootstrap">
 <meta charset="utf-8">
 <title>Cinema Siw</title>
 <link rel="stylesheet" href="/prenotazioniPerUtente.css"></link>
+
 </head>
 <body>
+	<header th:replace="fragments/layout.html :: navbar"> </header>
 	<section>
 		<div>
-			<h1 class="titolo"
-				th:text="'Elenco delle tue prenotazioni">
-				Elenco delle prenotazioni</h1>
+			<h1>Elenco delle tue prenotazioni</h1>
 		</div>
 		<br>
 		<table class="table">
-			<thead class="titoletto">
+			<thead>
 				<tr>
-					<th scope="col">Nome</th>
-					<th scope="col">Descrizione</th>
-					<th scope="col">Operazione</th>
+					<th scope="col">Nome film</th>
+					<th scope="col">Data e ora spettacolo</th>
+					<th scope="col">Sala</th>
 				</tr>
 			</thead>
 
-			<tbody class="titoletto">
-				<tr th:each="buffet: ${buffets}">
-					<td th:text="${buffet.nome}"></td>
-					<td th:text="${buffet.descrizione}"></td>
-					<td><a class="btn btn-danger"
-						th:href="@{/administration/buffets/del/{id}(id=${buffet.id})}">Delete</a>
-						<a class="btn btn-warning"
-						th:href="@{/administration/piatti/new/{buffet_id}(buffet_id=${buffet.id})}">Add
-							Piatto</a> <a class="btn btn-info"
-						th:href="@{/administration/piatti/buffet/{buffet_id}(buffet_id=${buffet.id})}">Guarda
-							i Piatti</a></td>
+			<tbody>
+				<tr th:each="prenotazione: ${prenotazioni}">
+					<td th:text="${prenotazione.spettacolo.film.titolo}"></td>
+					<td th:text="${prenotazione.spettacolo.dataConOra}"></td>
+					<td th:text="${prenotazione.spettacolo.sala.nome}"></td>
 				</tr>
 			</tbody>
 		</table>
-		<div>
-			<div class="bottone">
-				<a class="btn btn-info btn-sm twtr" href="/administration/chefs"
-					target="_b">Back</a>
-			</div>
-		</div>
 	</section>
 	<div th:replace="fragments/layout.html :: jsFiles"></div>
 </body>
