--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -9,7 +9,7 @@
 <!-- 							HEADER                  					      -->
 <!-- ============================================================================ -->
 <header th:fragment="navbar">
-	<h1>CINEMA SIW</h1>
+	<h1><a href="/">CINEMA SIW</a></h1>
 	<div class="navigationMenu">
 		<div>
 			<a href="/films"><strong> FILM </strong></a>
@@ -31,14 +31,12 @@
 <!-- 							FOOTER                  					      -->
 <!-- ============================================================================ -->
 <footer th:fragment="footer">
-		<div id="footerFlex">
-			<div> 
-				<div><strong>Cinema Siw</strong></div>
-				<div>Via della Vasca Navale, 79 - 00146 - Roma </div>
-				<div><a href="tel:+39 3210456789">Tel. +39 3210456789</a></div> 
-				<div><a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a></div>
-			</div>
-		</div>
+	<div id="footerFlex">
+		<div><strong>Cinema Siw</strong></div>
+		<div>Via della Vasca Navale, 79 - 00146 - Roma </div>
+		<div><a href="tel:+39 3210456789">Tel. +39 3210456789</a></div> 
+		<div><a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a></div>
+	</div>
 </footer>
 
 </html>
