--- a/src/main/resources/static/film.css
+++ b/src/main/resources/static/film.css
@@ -2,6 +2,12 @@ html{
   background-color: AliceBlue;
 }
 
+
+body {
+	margin: 0px;
+	text-align:center;
+}
+
 header h1{
   text-align: center;
   padding-top: 5vh;
@@ -72,34 +78,6 @@ div.line{
   margin-bottom: -10px;
 }
 
-footer a:link{
-  color:black;
-  text-decoration: none;
-}
 
-footer a:hover{
-  color: LightSkyBlue;
-}
-
-footer{
-  display:flex;
-  height:150px;
-  background-color: SteelBlue;
-
- margin-top: 200px;
-
-  
-}
-
-#footerFlex{
-  display:flex;
-   color: black;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 40vw;
-
-  
-}
   
 
