--- a/src/main/resources/static/films.css
+++ b/src/main/resources/static/films.css
@@ -2,6 +2,10 @@ html{
   background-color: AliceBlue;
 }
 
+body {
+	margin: 0px;
+}
+
 header h1{
   text-align: center;
   padding-top: 5vh;
@@ -123,40 +127,5 @@ div.Item a:visited{
 .filmLink{
   display: block;
   width: 100%;
-}
-
-
-
-
-
-
-footer a:link{
-  color:black;
-  text-decoration: none;
-}
-
-footer a:hover{
-  color: LightSkyBlue;
-}
-
-footer{
-  display:flex;
-  height:150px;
-  background-color: SteelBlue;
-
-  margin-top: 200px;
-
-  
-}
-
-#footerFlex{
-  display:flex;
-   color: black;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 40vw;
-
-  
 }
   
