--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -6,28 +6,6 @@ body {
 	margin: 0px;
 }
 
-@keyframes headerAnimation{
-  0% {background-image: url("cinema1.jpeg");}
-  20% {background-image: url("cinema2.jpeg");}
-  40% {background-image: url("cinema3.jpeg") }
-  60% {background-image: url("cinema4.jpeg") ;}
-  80% {background-image: url("cinema5.jpeg") ;}
-  100% {background-image: url("cinema6.jpeg") ;}
- }
-
-header {
-  animation: headerAnimation 60s infinite ease-in backwards;
-  height: 100vh;
-  width: 100vw;
-  margin: -10px;
-
-}
-
-header h1 a{
-	color: black;
-	text-decoration: none;
-}
-
 h1 {
   text-align: center;
   padding-top: 5vh;
@@ -38,31 +16,10 @@ h1 {
   
 }
 
-.navigationMenu a{
-  color: white;
-  text-decoration: none;
-  font-size: 110%;
-}
-
-.navigationMenu a:hover{
-  color: lightSkyBlue;
-}
-
-.navigationMenu {
-  display: flex;
-  flex-grow: 1;
-  justify-content: space-evenly;
-  align-items:center;
-  padding-bottom: 2vh;
-  padding-top: 2vh;
-
-  background-color: steelBlue;
-}
-
 form {
   text-align: center;
   margin-top: 5%;
-   margin-bottom: 6%;
+  margin-bottom: 6%;
 }
 
 form div{
@@ -71,7 +28,7 @@ form div{
 
 input{
   width: 350px;
-   text-align: center;
+  text-align: center;
 }
 
 button{
@@ -92,34 +49,7 @@ button:hover{
   margin-left: 9%;
 }
 
-#tutti {
+#tutti { /* dov'è usato? */
   margin-top: -11px;
-}
-
-footer a:link{
-  color:black;
-  text-decoration: none;
-}
-
-footer a:hover{
-  color: LightSkyBlue;
-}
-
-footer{
-  display:flex;
-  height:150px;
-  background-color: SteelBlue;
-
-  margin-top: 200px;
-}
-
-#footerFlex {
-  display:flex;
-  color: black;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 40vw;
-}
-  
+} 
 
