--- a/src/main/resources/static/login.css
+++ b/src/main/resources/static/login.css
@@ -1,5 +1,10 @@
-html{
+html {
   background-color: AliceBlue;
+}
+
+body {
+	margin: 0px;
+	text-align:center;
 }
 
 header h1{
@@ -9,8 +14,9 @@ header h1{
   margin-bottom: 0;
   margin-top:0;
   background-color: lightSkyBlue
-  
+
 }
+
 header h1 a{
 	color: black;
 	text-decoration: none;
@@ -20,35 +26,11 @@ header h1 a:hover{
 	color: black;
 }
 
-.navigationMenu a{
-  color: white;
-  text-decoration: none;
-  font-size: 110%;
-}
-
-.navigationMenu a:hover{
-  color: lightSkyBlue;
-}
-
-.navigationMenu{
-  display: flex;
-  flex-grow: 1;
-  justify-content: space-evenly;
-  align-items:center;
-  padding-bottom: 2vh;
-  padding-top: 2vh;
-
-  background-color: steelBlue;
-}
-
-body{
- text-align:center;
-
-}
 h1{
   margin-top:5%;
 }
-form{
+
+form {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -108,36 +90,3 @@ form div{
 
   font-size:110%;
 }
-
-
-footer a:link{
-  color:black;
-  text-decoration: none;
-}
-
-footer a:hover{
-  color: LightSkyBlue;
-}
-
-footer{
-  display:flex;
-  height:150px;
-  background-color: SteelBlue;
-   margin-top: 200px;
- 
-
-  
-}
-
-#footerFlex{
-  display:flex;
-   color: black;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 40vw;
-
-  
-}
-  
-
