--- a/src/main/resources/static/spettacoli.css
+++ b/src/main/resources/static/spettacoli.css
@@ -2,6 +2,10 @@ html{
   background-color: AliceBlue;
 }
 
+body {
+	margin: 0;
+}
+
 header h1{
   text-align: center;
   padding-top: 5vh;
@@ -49,37 +53,6 @@ li{
 
 li:hover{
   background-color: azure;
-}
-
-
-footer a:link{
-  color:black;
-  text-decoration: none;
-}
-
-footer a:hover{
-  color: LightSkyBlue;
-}
-
-footer{
-  display:flex;
-  height:150px;
-  background-color: SteelBlue;
-   margin-top: 400px;
- 
-
-  
-}
-
-#footerFlex{
-  display:flex;
-   color: black;
-  text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 40vw;
-
-  
 }
   
 
