--- a/src/main/resources/templates/film.html
+++ b/src/main/resources/templates/film.html
@@ -1,42 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
- <title>Cinema Siw</title>
-  <link rel="stylesheet" href="/film.css" ></link>	
- </head>
-<header>
-   <h1> <a  href="/">CINEMA SIW</a> </h1>
-  <div class="navigationMenu">
-     <div><a  href="/films"><strong> FILM </strong></a></div>
-    <div><a href="/spettacoli" ><strong> PROGRAMMAZIONE </strong></a></div>
-    <div><strong>CHI SIAMO</strong></a> </div>
-    <div><a  th:unless="${userLoggato}"th:href="@{/login}"><strong> LOGIN </strong></a>
-  	<a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a></div>
- </div>
-</div>
-</header>
- <body>
-<div id="flexBody">
-    <h1 th:text="${film.titolo}">titolo</h1>
-    <hr width="92%" color="steelBlue" size="5%"></hr>
-   <p  th:text="${film.descrizione}">descrizione film brellissimo ecc eccecc</p>
-   <div class="line">
-     <h4>GENERE:</h4>
-     <text th:text="${film.genere}">genere </text>
-   </div>
-   <div class="line">
-     <h4>REGISTA:</h4>
-     <text th:text="${film.regista}">nome del regista </text>
-   </div>
- </div>
+<title>Cinema Siw</title>
+<link rel="stylesheet" href="/film.css"></link>
+<link rel="stylesheet" href="/noImageBar.css"></link>
+<link rel="stylesheet" href="/footer.css"></link>
+</head>
+<body>
+	<header th:replace="fragments/layout.html :: navbar"></header>
+	
+	<div id="flexBody">
+		<h1 th:text="${film.titolo}">titolo</h1>
+		<hr width="92%" color="steelBlue" size="5%"></hr>
+		<p th:text="${film.descrizione}">descrizione film brellissimo ecc
+			eccecc</p>
+		<div class="line">
+			<h4>GENERE:</h4>
+			<text th:text="${film.genere}">genere </text>
+		</div>
+		<div class="line">
+			<h4>REGISTA:</h4>
+			<text th:text="${film.regista}">nome del regista </text>
+		</div>
+	</div>
+	
+	<footer th:replace="fragments/layout.html :: footer"></footer>
 </body>
-<footer>
-  <div id="footerFlex">
-  <text><strong>Cinema Siw</strong></text>
-  <text>Via della Vasca Navale, 79 - 00146 - Roma </text>
-  <a  href="tel:+39 3210456789">Tel. +39 3210456789</a>
-  <a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
-</div>
-</footer>
 </html>
