--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -4,28 +4,12 @@
 <meta charset="utf-8">
 <title>Cinema Siw</title>
 <link rel="stylesheet" href="/films.css"></link>
+<link rel="stylesheet" href="/noImageBar.css"></link>
+<link rel="stylesheet" href="/footer.css"></link>
 </head>
-<header>
-	<h1>
-		<a href="/">CINEMA SIW</a>
-	</h1>
-	<div class="navigationMenu">
-		<div>
-			<a href="/films"><strong> FILM </strong></a>
-		</div>
-		<div>
-			<a><strong> PROGRAMMAZIONE </strong></a>
-		</div>
-		<div>
-			<strong>CHI SIAMO</strong>
-		</div>
-		<div>
-			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>
-					LOGIN </strong></a> <a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a>
-		</div>
-	</div>
-</header>
 <body>
+	<header th:replace="fragments/layout.html :: navbar"></header>
+	
 	<div id="flexBody">
 		<h1>I FILM IN PROGRAMMA</h1>
 		<hr width="92%" color="steelBlue" size="5%"></hr>
@@ -51,15 +35,7 @@
 			</div>
 		</div>
 	</div>
-	<footer>
-		<div id="footerFlex">
-			<div>
-				<strong>Cinema Siw</strong>
-			</div>
-			<div>Via della Vasca Navale, 79 - 00146 - Roma</div>
-			<a href="tel:+39 3210456789">Tel. +39 3210456789</a> <a
-				href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
-		</div>
-	</footer>
+	
+	<footer th:replace="fragments/layout.html :: footer"></footer>
 </body>
 </html>
