--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
- <title>Cinema Siw</title>
-  <link rel="stylesheet" href="/registerForm.css" ></link>
- </head>
-<header>
-   <h1> <a href="/">CINEMA SIW</a> </h1>
-  <div class="navigationMenu">
-     <div><a  href="/films"><strong> FILM </strong></a></div>
-    <div><a href="/spettacoli"><strong> PROGRAMMAZIONE </strong></a></div>
-    <div><strong>CHI SIAMO</strong></a> </div>
-    <div><a  th:unless="${userLoggato}"th:href="@{/login}"><strong> LOGIN </strong></a>
-  	<a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a></div>
- </div>
-</div>
-</header>
- <body>
-  <h1> Registrati</h1>
-<form form th:action="@{/register}" method="POST">
-<div class="campo">username:<input type="text" placeholder="username" required th:field="${credentials.username}" /></div>
-<span th:if="${#fields.hasErrors('credentials.username')}" th:errors="*{credentials.username}"></span>
-<div class="campo">password:<input type="password" placeholder="password" required th:field="${credentials.password}"  /></div>
-<span th:if="${#fields.hasErrors('credentials.password')}" th:errors="*{credentials.password}"></span>
-<div class="campo">nome:<input type="text" placeholder="nome" required th:field="${user.nome}" /></div>
-<span th:if="${#fields.hasErrors('user.nome')}" th:errors="*{user.nome}"></span>
-<div class="campo">cognome<input type="text" placeholder="cognome" required th:field="${user.cognome}"/></div>
-<span th:if="${#fields.hasErrors('user.cognome')}" th:errors="*{user.cognome}"></span>
-<div><button type="submit">Registra</button></div>
-</form>
+<title>Cinema Siw</title>
+<link rel="stylesheet" href="/registerForm.css"></link>
+<link rel="stylesheet" href="/noImageBar.css"></link>
+<link rel="stylesheet" href="/footer.css"></link>
+</head>
+<body>
+	<header th:replace="fragments/layout.html :: navbar"></header>
+	<h1>Registrati</h1>
+	<form form th:action="@{/register}" method="POST">
+		<div class="campo">
+			username:<input type="text" placeholder="username" required
+				th:field="${credentials.username}" />
+		</div>
+		<span th:if="${#fields.hasErrors('credentials.username')}"
+			th:errors="*{credentials.username}"></span>
+		<div class="campo">
+			password:<input type="password" placeholder="password" required
+				th:field="${credentials.password}" />
+		</div>
+		<span th:if="${#fields.hasErrors('credentials.password')}"
+			th:errors="*{credentials.password}"></span>
+		<div class="campo">
+			nome:<input type="text" placeholder="nome" required
+				th:field="${user.nome}" />
+		</div>
+		<span th:if="${#fields.hasErrors('user.nome')}"
+			th:errors="*{user.nome}"></span>
+		<div class="campo">
+			cognome<input type="text" placeholder="cognome" required
+				th:field="${user.cognome}" />
+		</div>
+		<span th:if="${#fields.hasErrors('user.cognome')}"
+			th:errors="*{user.cognome}"></span>
+		<div>
+			<button type="submit">Registra</button>
+		</div>
+	</form>
+	
+	<footer th:replace="fragments/layout.html :: footer"></footer>
 </body>
-<footer>
-  <div id="footerFlex">
-  <text><strong>Cinema Siw</strong></text>
-  <text>Via della Vasca Navale, 79 - 00146 - Roma </text>
-  <a  href="tel:+39 3210456789">Tel. +39 3210456789</a>
-  <a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a>
-</div>
-</footer>
 </html>
