--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -30,7 +30,7 @@
 		</div>
 		<div>
 			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>
-					LOGIN </strong></a> <a th:if="${userLoggato}" th:href="@{/prenota}">PRENOTA</a>
+					LOGIN </strong></a> <a th:if="${userLoggato}" th:href="@{/prenota}"><strong>PRENOTAZIONI</strong></a>
 		</div>
 	</div>
 </header>
