--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Cinema Siw</title>
-<link rel="stylesheet" href="/registerForm.css"></link>
+<link rel="stylesheet" href="/form.css"></link>
 <link rel="stylesheet" href="/noImageBar.css"></link>
 <link rel="stylesheet" href="/footer.css"></link>
 </head>
