--- a/src/main/resources/static/form.css
+++ b/src/main/resources/static/form.css
@@ -1,48 +1,3 @@
-html{
-  background-color: AliceBlue;
-}
-
-header h1{
-  text-align: center;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-  margin-bottom: 0;
-    margin-top:0;
-  background-color: lightSkyBlue
-  
-}
-
-header h1 a{
-	color: black;
-	text-decoration: none;
-}
-
-.navigationMenu a{
-  color: white;
-  text-decoration: none;
-  font-size: 110%;
-}
-
-.navigationMenu a:hover{
-  color: lightSkyBlue;
-}
-
-.navigationMenu{
-  display: flex;
-  flex-grow: 1;
-  justify-content: space-evenly;
-  align-items:center;
-  padding-bottom: 2vh;
-  padding-top: 2vh;
-
-  background-color: steelBlue;
-}
-
-body{
- text-align:center;
- margin: 0;
-}
-
 h1{
   margin-top:5%;
 }
@@ -54,7 +9,7 @@ form{
   margin-left:38%;
   margin-right: 44%;
   margin-top: 1%;
-  margin-bottom: 20%;
+  margin-bottom: 20px;
 }
 
 span{
@@ -93,10 +48,12 @@ button:hover{
   margin-bottom: 2%;
 }
 
+body{
+ text-align:center;
+}
 
 form div{
 
   font-size:110%;
 }
-
 
