--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,10 +1,3 @@
-html {
-  background-color: AliceBlue;
-}
-
-body {
-	margin: 0px;
-}
 
 h1 {
   text-align: center;
@@ -42,14 +35,16 @@ button:hover{
   background-color: lightSkyBlue;
 }
 
-#flexForm {	/* dov'è usato? */
+#flex {	
   display:flex;
   align-items: center;
   justify-content: center;
   margin-left: 9%;
 }
 
-#tutti { /* dov'è usato? */
-  margin-top: -11px;
-} 
+#tutti{
+  margin-top: -13px;
+}
+
+
 
