--- a/src/main/resources/static/noImageBar.css
+++ b/src/main/resources/static/noImageBar.css
@@ -1,3 +1,15 @@
+html{
+  background-color: AliceBlue;
+}
+
+body {
+	margin: 0px;
+}
+
+header{
+	text-align: center;
+}
+
 header h1 a {
 	color: black;
 	text-decoration: none;
