--- a/src/main/resources/static/navigationBar.css
+++ b/src/main/resources/static/navigationBar.css
@@ -25,6 +25,16 @@ header {
 
 }
 
+header h1 {
+  text-align: center;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  margin-bottom: 0;
+  margin-top: 0;
+  background-color: lightSkyBlue
+  
+}
+
 header h1 a{
 	color: black;
 	text-decoration: none;
