--- a/src/main/resources/static/noImageBar.css
+++ b/src/main/resources/static/noImageBar.css
@@ -10,6 +10,16 @@ header{
 	text-align: center;
 }
 
+header h1 {
+  text-align: center;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  margin-bottom: 0;
+  margin-top: 0;
+  background-color: lightSkyBlue
+  
+}
+
 header h1 a {
 	color: black;
 	text-decoration: none;
