Cambio nomi path dei film
Così che sia più facile aggiungere metodi che hanno a che fare coi film

--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -22,7 +22,7 @@
 				</a>
 			</div>
 			<div class="Azione" th:if="${amministratoreLoggato}">
-				<form th:action="@{'/toDeleteFilm' + '/' +${film.id}}" method="post">
+				<form th:action="@{'/film/deleteForm' + '/' +${film.id}}" method="post">
 					<button type="submit">Elimina</button>
 				</form>
 			</div>
