--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -20,7 +20,7 @@
 	<h1><a href="/">CINEMA SIW</a></h1>
 	<div class="navigationMenu">
 		<div>
-			<a href="/films"><strong> FILM </strong></a>
+			<a href="/film/all"><strong> FILM </strong></a>
 		</div>
 		<div>
 			<a href="/spettacoli"><strong> PROGRAMMAZIONE </strong></a>
@@ -29,8 +29,8 @@
 			<a href=""><strong>CHI SIAMO</strong></a>
 		</div>
 		<div>
-			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>
-					LOGIN </strong></a> <a th:if="${userLoggato}" th:href="@{/prenota}"><strong>PRENOTAZIONI</strong></a>
+			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>LOGIN </strong></a>
+			<a th:if="${userLoggato}" th:href="@{/prenota}"><strong>PRENOTAZIONI</strong></a>
 		</div>
 	</div>
 </header>
