--- a/src/main/resources/templates/prenotazioniPerUtente.html
+++ b/src/main/resources/templates/prenotazioniPerUtente.html
@@ -25,7 +25,7 @@
 			</thead>
 
 			<tbody>
-				<tr th:each="prenotazione: ${prenotazioni}">
+				<tr th:each="prenotazione: ${user.prenotazioni}"> 
 					<td th:text="${prenotazione.spettacolo.film.titolo}"></td>
 					<td th:text="${prenotazione.spettacolo.dataConOra}"></td>
 					<td th:text="${prenotazione.spettacolo.sala.nome}"></td>
