Aggiunto vincolo sull'unicità delle prenotazioni
Non può esistere una prenotazione che fa riferimento allo stesso spettacolo e allo stesso utente

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -30,7 +30,7 @@
 		</div>
 		<div>
 			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>LOGIN </strong></a>
-			<a th:if="${userLoggato}" th:href="@{/user/prenota}"><strong>PRENOTAZIONI</strong></a>
+			<a th:if="${userLoggato}" th:href="@{/user/prenota}"><strong>AREA UTENTE</strong></a>
 		</div>
 	</div>
 </header>
