--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -29,8 +29,11 @@
 			<a href=""><strong>CHI SIAMO</strong></a>
 		</div>
 		<div>
+			<a th:if="${userLoggato}" th:href="@{/user/prenota}"><strong>PRENOTAZIONI</strong></a>
+		</div>
+		<div>
 			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>LOGIN </strong></a>
-			<a th:if="${userLoggato}" th:href="@{/user/prenota}"><strong>AREA UTENTE</strong></a>
+			<a th:if="${userLoggato}" th:href="@{/logout}"><strong>LOGOUT</strong></a>
 		</div>
 	</div>
 </header>
