--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -9,15 +9,15 @@
 <!-- bootstrap core css -->
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-
-<!-- Custom styles -->
-<link href="/css/style.css" rel="stylesheet" />
 </head>
 <!-- ============================================================================ -->
 <!-- 							HEADER                  					      -->
 <!-- ============================================================================ -->
 <header th:fragment="navbar">
-	<h1><a href="/">CINEMA SIW</a></h1>
+	<h1>
+		<a href="/">CINEMA</a>
+		<a href="/">SIW</a>
+	</h1>
 	<div class="navigationMenu">
 		<div>
 			<a href="/film/all"><strong> FILM </strong></a>
@@ -29,9 +29,7 @@
 			<a href=""><strong>CHI SIAMO</strong></a>
 		</div>
 		<div>
-			<a th:if="${userLoggato}" th:href="@{/user/prenota}"><strong>PRENOTAZIONI</strong></a>
-		</div>
-		<div>
+		<a th:if="${userLoggato}" th:href="@{/user/prenota}"><strong>PRENOTAZIONI</strong></a>
 			<a th:unless="${userLoggato}" th:href="@{/login}"><strong>LOGIN </strong></a>
 			<a th:if="${userLoggato}" th:href="@{/logout}"><strong>LOGOUT</strong></a>
 		</div>
@@ -46,7 +44,7 @@
 		<div><strong>Cinema Siw</strong></div>
 		<div>Via della Vasca Navale, 79 - 00146 - Roma </div>
 		<div><a href="tel:+39 3210456789">Tel. +39 3210456789</a></div> 
-		<div><a href="mailto:info@michelincatering.it"> info@cinemasiw.it</a></div>
+		<div><a href="mailto:info@cinemasiw.it"> info@cinemasiw.it</a></div>
 	</div>
 </footer>
 
