--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,30 +1,76 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="utf-8">
-	<title>Cinema Siw</title>
-	 <link rel="stylesheet" href="/index.css"></link>
-	<link rel="stylesheet" href="/navigationBar.css"></link>
-	<link rel="stylesheet" href="/footer.css"></link>
+<!-- da qui... -->
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+	href="https://fonts.googleapis.com/css2?family=Amiri&family=Mrs+Sheppards&family=Sonsie+One&display=swap"
+	rel="stylesheet">
+<link rel="stylesheet" href="/noImageBar.css"></link>
+<link rel="stylesheet" href="/footer.css"></link>
+<!-- a qui, copiare in ogni html -->
+<title>Cinema Siw</title>
+<link rel="stylesheet" href="/imageBar.css"></link>
+<link rel="stylesheet" href="/index.css"></link>
 </head>
 <body>
 	<header th:replace="fragments/layout.html :: navbar"></header>
-	
-	<div id="flex">
-	<form th:action="@{/film/nome}" method="get">
-		<div>Che film vuoi vedere?</div>
-		<input name="nome" placeholder="Inserisci il nome di un film" required></input>
-		<div>
-			<button type="submit">Cerca</button>
+
+	<div id="image-div"></div>
+
+	<div id="homepage-core">
+		<div class="title">I più grandi successi di ieri e di oggi, a
+			tua disposizione</div>
+
+		<p class="homepage-paragraph">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sit
+			amet tristique ex. Orci varius natoque penatibus et magnis dis
+			parturient montes, nascetur ridiculus mus. Vestibulum ante ipsum <b>primis
+				in faucibus orci</b> luctus et ultrices posuere cubilia curae; Nunc
+			porttitor, turpis sed lobortis ultricies, tellus ante gravida leo,
+			sit amet gravida elit nulla id eros.
+		</p>
+
+		<p class="homepage-paragraph">
+			Cras pellentesque ac mi elementum malesuada. Proin urna tortor,
+			gravida non consequat non, lobortis nec quam. Cras auctor nisl ut
+			luctus vehicula. Nam accumsan scelerisque libero, nec porta odio
+			porta ut. In et imperdiet lectus. <b>Duis a fringilla sapien.</b>
+			Vivamus consectetur mi sit amet elit congue, id venenatis odio
+			commodo. Fusce ac mattis magna, nec ultricies quam. Mauris id turpis
+			pharetra, mattis magna eu, sagittis ex. Morbi ut lectus erat.
+			Suspendisse lectus quam, rhoncus non vulputate sit amet, finibus quis
+			justo. Fusce a enim lectus. Vivamus quis dapibus tortor. Maecenas
+			egestas non velit non ultrices. <b>Nam cursus, nisl sit amet
+				molestie rhoncus, quam nibh lobortis libero, sit amet sodales libero
+				enim in tellus.<br/>
+			Quindi ...</b>
+		</p>
+
+		<div id="flex-block">
+			<form th:action="@{/film/nome}" method="get">
+				<div class="title">...Che film vuoi vedere oggi?</div>
+				<div class="form-group rows">
+					<input class="form-control" name="nome"
+						placeholder="Inserisci il nome di un film..." required></input>
+					<button class="btn btn-primary our-button" type="submit">
+						<img id="search-image" src="../images/search-icon.png" />
+					</button>
+				</div>
+				<div class="error" th:if="${isFilmInesistente}" th:text="#{film.inesistente}"></div>
+			</form>
+
+		<!-- 	<button id="tutti" formaction="@{/films}" formmethod="get">Tutti i film</button>  -->
 		</div>
-		<div th:if="${isFilmInesistente}" th:text="#{film.inesistente}"></div>
-	</form>
-	
-   <button id="tutti" formaction="@{/films}" formmethod="get">Tutti i film</button>
- 
-  
-  </div>
-  
+	</div>
+
 	<footer th:replace="fragments/layout.html :: footer"></footer>
+
 </body>
 </html>
