--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
 	rel="stylesheet">
 <link rel="stylesheet" href="/noImageBar.css"></link>
 <link rel="stylesheet" href="/footer.css"></link>
-<!-- a qui, copiare in ogni html -->
-<title>Cinema Siw</title>
+<!-- ...a qui, copiare in ogni html -->
+<title>Cinema Siw: Home</title>
 <link rel="stylesheet" href="/imageBar.css"></link>
 <link rel="stylesheet" href="/index.css"></link>
 </head>
