--- a/src/main/resources/static/films.css
+++ b/src/main/resources/static/films.css
@@ -1,24 +1,39 @@
-
 #flexBody{
   display: flex;
   flex-direction: column;
-  margin-bottom: 5%;
-  
-  
 }
 
-
-div#flexBody h1{
-  margin-left: 5%;
-  
-
+.elementoLista{
+  display: flex;
+  align-items: center;
 }
 
+.filmLink{
+  display: block;
+  width: 100%;
+}
 
-.Item{
+.item{
   margin-left: 7%;
-  margin-bottom:10%;
+  margin-bottom:5%;
   width: 80%;
+}
+
+.item:hover{
+  background-color: var(--secondary-color);
+  box-shadow: 0 0 20px 30px var(--secondary-color);
+  border-radius: 10%;
+  }
+
+.text{
+  color: dimgrey;
+  font-style: italic; 
+  margin-left: 2%
+}
+
+.item a{
+  color: black;
+  text-decoration: none;
 }
 
 .Azione{
@@ -27,17 +42,6 @@ div#flexBody h1{
   width: 20%;
   margin-right: 7%;
 }
-
-div.Item:hover{
-  background-color: lightblue;
-  }
-
-div.Item text{
-  color: dimgrey;
-  font-style: italic; 
-  margin-left: 2%
-}
-
 
 #titolo{
   display: flex;
@@ -50,8 +54,6 @@ div.Item text{
   margin-left: 1%
 }
 
-
-
 button{
   background-color: lightSkyBlue;
   border-color: steelBlue;
@@ -59,26 +61,4 @@ button{
   font-size: 15px;
 }
 
-
-#elementoLista{
-  display: flex;
-  align-items: center;
-
-}
-
-
-div.Item a:link{
-  color: black;
-  text-decoration: none;
-}
-
-div.Item a:visited{
-  color: black;
-  text-decoration: none;
-}
-
-.filmLink{
-  display: block;
-  width: 100%;
-}
   
