--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -15,38 +15,37 @@
 <link rel="stylesheet" href="/noImageBar.css"></link>
 <link rel="stylesheet" href="/footer.css"></link>
 <!-- a qui, copiare in ogni html -->
-<title>Cinema Siw</title>
+<title>Cinema Siw: Films</title>
 <link rel="stylesheet" href="/films.css"></link>
 </head>
 <body>
 	<header th:replace="fragments/layout.html :: navbar"></header>
-	
-	<div id="flexBody">
-		<h1>I FILM IN PROGRAMMA</h1>
-		<hr width="92%" color="steelBlue" size="5%"></hr>
-		<div id="elementoLista" th:each="film : ${films}">
-
-			<div class="Item">
-				<a th:href="@{'/film' + '/' + ${film.id}}" class="filmLink">
-					<h3 th:text="${film.titolo}">titolo film</h3> <text
-						th:text="${film.descrizione}">descrizione</text>
-				</a>
+	<div class="space-container">
+		<div id="flexBody">
+			<div class="title bottom-border">I FILM IN PROGRAMMA</div>
+			<div class="elementoLista" th:each="film : ${films}">
+				<div class="item">
+					<a th:href="@{'/film' + '/' + ${film.id}}" class="filmLink">
+						<span class="subtitle" th:text="${film.titolo}">titolo film</span><br/>
+						<span class="text" th:text="${film.descrizione}">descrizione</span>
+					</a>
+				</div>
+				<div class="Azione" th:if="${amministratoreLoggato}">
+					<form th:action="@{'/film/deleteForm' + '/' +${film.id}}"
+						method="post">
+						<button type="submit">Elimina</button>
+					</form>
+				</div>
+				<div class="Azione" th:if="${userLoggato}">
+					<form th:action="@{'/user/prenotazione/film'+'/'+ ${film.id}}"
+						method="get">
+						<button type="submit">Prenota</button>
+					</form>
+				</div>
 			</div>
-			<div class="Azione" th:if="${amministratoreLoggato}">
-				<form th:action="@{'/film/deleteForm' + '/' +${film.id}}" method="post">
-					<button type="submit">Elimina</button>
-				</form>
-			</div>
-			<div class="Azione" th:if="${userLoggato}">
-				<form th:action="@{'/user/prenotazione/film'+'/'+ ${film.id}}" method="get">
-					<button type="submit">Prenota</button>
-				</form>
-			</div>
-
 		</div>
 	</div>
-	
+
 	<footer th:replace="fragments/layout.html :: footer"></footer>
 </body>
-</footer>
 </html>
