--- a/src/main/resources/static/form.css
+++ b/src/main/resources/static/form.css
@@ -1,59 +1,18 @@
-h1{
-  margin-top:5%;
-}
-form{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  text-align:right;
-  margin-left:38%;
-  margin-right: 44%;
-  margin-top: 1%;
-  margin-bottom: 20px;
-}
-
-span{
-  color: steelBlue;
-  font-weight:bold;
-  font-size: 80%;
-  text-align: right;
-}
-
-input{
-  margin-left: 3%;
-  text-align:left;
-  box-sizing: border-box;
-  border: 2px inset steelBlue;
-  background-color: lightSkyBlue;
-}
-
-
-button{
-  margin-right: 25%;
-  margin-top: 10%;
-  background-color: azure;
-  border-radius: 40%;
-  font-size: 70%;
-  border-color: steelBlue;
-}
-
-button:hover{
-  background-color: lightskyblue;
-}
-
-
-
-.campo{
-  display:flex;
-  margin-bottom: 2%;
-}
-
 body{
  text-align:center;
 }
 
-form div{
+form{
+  padding: 0 30%;
+}
 
+.campo {
+  display:flex;
+  margin-bottom: 2%;
+  gap:3%;
+}
+
+form div{
   font-size:110%;
 }
 
