--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+<!-- da qui... -->
 <meta charset="utf-8">
-<title>Cinema Siw</title>
-<link rel="stylesheet" href="/form.css"></link>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+	href="https://fonts.googleapis.com/css2?family=Amiri&family=Mrs+Sheppards&family=Sonsie+One&display=swap"
+	rel="stylesheet">
 <link rel="stylesheet" href="/noImageBar.css"></link>
 <link rel="stylesheet" href="/footer.css"></link>
+<!-- a qui, copiare in ogni html -->
+<title>Cinema Siw</title>
+<link rel="stylesheet" href="/form.css"></link>
 </head>
 
 <body>
 	<header th:replace="fragments/layout.html :: navbar"></header>
-	<h1>Login</h1>
-	
-	<form th:action="@{/login}" method="post">
-		<div class="campo">
-			username:<input type="text" name="username" />
-		</div>
-		<div class="campo">
-			password:<input type="password" name="password" />
-		</div>
-		<button type="submit">Conferma</button>
-		<div th:if="${error}">
-			<p>Errore durante l'autenticazione</p>
-		</div>
-	</form>
+
+	<div class="space-container">
+		<div class="title bottom-border">LOGIN</div>
 		
-	<div>Non sei ancora Registrato? Fallo subito!</div>
-	<a th:href="@{/register}"><strong>Registrati</strong></a>
-	
+		<p> <em>
+			Autenticati per accedere a tutti i servizi di cinema SIW, come la prenotazione
+			di un posto per uno spettacolo o la visualizzazione delle prenotazioni fatte.
+			Usa la seguente form anche per accedere come amministratore del sistema.
+		</em> </p>
+		
+		<div th:if="${error}">
+			<p class="error" th:text="#{errore.autenticazione}"></p>
+		</div>
+		<form th:action="@{/login}" method="post">
+			<div class="form-group">
+				<div class="campo">
+					<input class="form-control" type="text" name="username" placeholder="inserisci qui il tuo username"/>
+				</div>
+				<div class="campo">
+					<input  class="form-control" type="password" name="password" placeholder="inserisci qui la tua password"/>
+				</div>
+				<button class="btn btn-primary our-button" type="submit">Conferma</button>
+			</div>
+		</form>
+
+		<div>Non sei ancora Registrato? Fallo subito!</div>
+		<a th:href="@{/register}"><strong>Registrati</strong></a>
+	</div>
 	<footer th:replace="fragments/layout.html :: footer"></footer>
 </body>
 </html>
