Rifattorizzazione grafica registrazione

--- a/src/main/resources/static/form.css
+++ b/src/main/resources/static/form.css
@@ -16,3 +16,15 @@ form div{
   font-size:110%;
 }
 
+.spaced {
+	margin-bottom: 30px !important;
+}
+
+.spaced-less {
+	margin-bottom: 50px !important;
+}
+
+
+.slim-input {
+	height: 70%;
+}
