--- a/src/main/resources/templates/registrationSuccessful.html
+++ b/src/main/resources/templates/registrationSuccessful.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
+<!-- da qui... -->
 <meta charset="utf-8">
- <title>Cinema Siw</title>
-  <link rel="stylesheet" href="/registrationSuccessfull.css" ></link>
-  <link rel="stylesheet" href="/noImageBar.css"></link>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<link rel="stylesheet"
+	href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+	href="https://fonts.googleapis.com/css2?family=Amiri&family=Mrs+Sheppards&family=Sonsie+One&display=swap"
+	rel="stylesheet">
+<link rel="stylesheet" href="/noImageBar.css"></link>
 <link rel="stylesheet" href="/footer.css"></link>
- </head>
+<!-- a qui, copiare in ogni html -->
+<title>Cinema Siw: Registrazione avvenuta</title>
+<link rel="stylesheet" href="/registrationSuccessfull.css"></link>
+</head>
+
 <body>
-<header th:replace="fragments/layout.html :: navbar"></header>
-  <div id="message">
-  <h1>Congratulazioni!</h1>
-  <text>Registrazione completata con successo.</text>
-  </div>
-  <footer th:replace="fragments/layout.html :: footer"></footer>
-  </body>
+	<header th:replace="fragments/layout.html :: navbar"></header>
+
+	<div class="space-container">
+		<div id="message">
+			<div class="title centered bottom-border">Congratulazioni!</div>
+			<span class="subtitle">Registrazione completata con successo.</span>
+		</div>
+	</div>
+	<footer th:replace="fragments/layout.html :: footer"></footer>
+</body>
 
 </html>
